2.3.2 m1
- Removed the CLI message feedback.

2.3.2 dev
- Added the method analysis to the recursion detection, to prevent
  analysing the same methods over and over again.
- Added Javascript optimisation for very large output.
- Change: Moved the overwrites from the GLOBALS to a static class
- Change: Prettified the display of sourcecode in the backtrace in
  the smoky grey skin.
- Change: Removed the option for the atomatic registration of the
  fatal error handler.
- Bugfix: Minimise CSS interference from the hosting cms with
  marked text.
- Bugfix: Disabling via sourcecode works again.
- Bugfix: Removed the special backtrace configuration, which
  resulted in a output overkill, crashing the backtrace.
- Bugfix: Removed the comma in the method parameter analysis.
- Bugfix: Fixed in issue, where the correct nesting level was not
  set correctly, resulting in output overkill.

2.3.1
- Bugfix: Fixed shell detection.
- Bugfix: Fixed shell message feedback
- Bugfix: Fixed ajax detection

2.3.0
- Added a configuration for the backtrace, to limit the analysed
  steps.
- Added property comments to the analysis
- Added property declaration place to the analysis.
- Added better unicode support for the HTML output.
- Added better support for debugging onepagers.
- Change: Several performance tweaks for runtime optimization.
- Change: Fallback setting runtime => level set to 5.
- Change: Fallback setting runtime => maxCall set to 10.
- Change: Refactored the half-assed messaging implementation.
- Change: The cookie editor is now much better readable.
- Bugfix: Several tweaks to get a smaller HTML footprint.
- Bugfix: Prevent the debug methods from creating new analysis
  calls, resulting in an infinite loop.
- Bugfix: Better cleanup of HTML fragments left open from
  the hosting CMS.
- Bugfix: Reverted the 'Output -> File' change from 2.2.0
- Bugfix: Prevent a notice in case a property has a default value
  which is NULL.