@@ -105,10 +105,6 @@
             </td>
         </tr>
         <tr>
-            <td>Destination:</td>
-            <td colspan="2">This setting is not editable on the frontend.</td>
-        </tr>
-        <tr>
             <td>Maximum files in the logfolder:</td>
             <td colspan="2">This setting is not editable on the frontend.</td>
         </tr>
