@@ -1,5 +1,6 @@
 2.3.2 m1
 - Removed the CLI message feedback.
+- Removed frontend output.
 
 2.3.2 dev
 - Added the method analysis to the recursion detection, to prevent
